fixSlideJumping

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -1015,7 +1015,7 @@ li.sortable-placeholder{border:1px dashed #CCC;}
 /* other */
 div[data-parent]{display: none;}
 .tab>li:not(.active){display:none}
-*[data-response-hide]{display:none!important}
+body *[data-response-hide]{display:none}
 textarea[data-resizable]{min-height:100px;overflow:hidden;}
 
 .main .search-box{margin:2em 0;}
